[package]
name = "cipdb"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
soup = "0.5"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
indicatif = "0.17.4"
futures = "0.3.28"
