[package]
name = "cip-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
soup = "0.5"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
indicatif = "0.17"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
clap = { version = "4.3", features = ["derive", "string"] }
